added some other classes

--- a/JavaCore/Makefile
+++ b/JavaCore/Makefile
@@ -1,4 +1,7 @@
-all: Solver.java Puzzle.java
-	javac Solver.java Puzzle.java
+all: Solver.java Puzzle.java Tester.java 
+	javac Solver.java Puzzle.java Tester.java
+
+test: all
+	java Tester < test.txt
 clean:
 	rm *.class
