--- a/JavaCore/Makefile
+++ b/JavaCore/Makefile
@@ -1,5 +1,5 @@
-all: Solver.java Puzzle.java Tester.java 
-	javac Solver.java Puzzle.java Tester.java
+all: Solver.java Tester.java DLinkedList.java
+	javac Solver.java Tester.java DLinkedList.java
 
 test: all
 	java Tester < test.txt
